# gen-linkml-profile

./: .gitignore  README.md  pyproject.toml
gen_linkml_profile/: __main__.py  schema_profiler.py  tree_visualiser.py
