[tool.poetry]
name = "gen-linkml-profile"
version = "0.16.0"
description = ""
authors = ["Ritger Teunissen <ritger.teunissen@alliander.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
linkml = "^1.7.5"
click = "^8.1.7"
treelib = "^1.7.0"
rdflib = "^7.0.0"
py-markdown-table = "^0.4.0"
networkx = "^3.3"

[tool.poetry.scripts]
gen-linkml-profile = "gen_linkml_profile.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
