[project]
name = "gen-linkml-profile"
version = "0.30.0"
description = ""
authors = [
    { name = "Ritger Teunissen", email = "ritger.teunissen@alliander.com" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = "~=3.10"
dependencies = [
    "linkml~=1.7.5",
    "click~=8.1",
    "treelib~=1.7",
    "rdflib~=7.0",
    "py-markdown-table~=0.4",
    "networkx~=3.3",
    "jinja2~=3.1",
]

[project.scripts]
gen-linkml-profile = "gen_linkml_profile.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
