[project]
name = "gen-linkml-profile"
version = "0.32.0"
description = ""
authors = [
    { name = "Ritger Teunissen", email = "ritger.teunissen@alliander.com" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = "~=3.10"
dependencies = [
    "linkml~=1.7",
    "click~=8.1",
    "treelib~=1.7",
    "jinja2~=3.1",
]

[project.scripts]
gen-linkml-profile = "gen_linkml_profile.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
